# Aether-Swarm

./: .env.example  .gitignore  README.md
cli/: Cargo.toml  demo-config.json
cli/src/: main.rs
docs/: architecture.md  demo-steps.md  usage.md
examples/agent-templates/: scout-agent.json
examples/public-goods-scenarios/: depin-node-deployment.json
examples/swarm-configs/: basic-public-goods.json
scripts/: build-all.bat  build-all.sh  setup-production.bat  setup-production.sh  validate-production.js
sdk/rust/: Cargo.toml
sdk/rust/contracts/: GrantDistribution.sol
sdk/rust/src/: agents.rs  consensus.rs  cortensor.rs  database.rs  lib.rs  swarm.rs
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: cortensor.ts  index.ts  types.ts
web-dashborad/: README.md  package-lock.json  package.json
web-dashborad/src/app/: globals.css  layout.tsx  page.tsx
web-dashborad/src/app/api/swarm/execute/: route.ts
web-dashborad/src/components/: AgentFlowChart.tsx  DiscoveryResults.tsx  LandingPage.tsx  LiveMetrics.tsx  SwarmCard.tsx  SwarmCreator.tsx  SwarmDashboard.tsx  SwarmExecutor.tsx  WalletConnect.tsx  Web3Provider.tsx
web-dashborad/src/lib/: database.ts  web3config.ts  websocket.ts
web-dashborad/src/lib/agents/: communication.ts  executor.ts  scout.ts  self-improvement.ts  verifier.ts
web-dashborad/src/lib/cortensor/: client.ts
