[package]
name = "aether-swarm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aether-swarm"
path = "src/main.rs"

[dependencies]
aether-swarm-sdk = { path = "../sdk/rust" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
colored = "2.0"
