[package]
name = "aether-swarm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aether-swarm"
path = "src/main.rs"

[dependencies]
aether-swarm-sdk = { path = "../sdk/rust" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
colored = "2.0"
ethers = "2.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
